cats/src/main/java/com/example/cats/Error/Exception/FactsUnexpectedError.java
package com.example.cats.Error.Exception;

public class FactsUnexpectedError extends RuntimeException{

    public FactsUnexpectedError(Throwable cause) {
        super(cause);
    }
}
